--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "intro_to_react_vanguard85",
   "version": "0.1.0",
+  "proxy":"https://kikicooks-database.herokuapp.com/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
