--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "intro_to_react_vanguard85",
   "version": "0.1.0",
-  "proxy":"https://kikicooks-database.herokuapp.com/",
+  "proxy": "https://kikicooks-database.herokuapp.com/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -19,7 +19,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
